--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "jquery.scrollex",
+  "name": "scrollex",
   "version": "1.0.0",
   "description": "Nifty scroll events for jQuery used in the Professor Zumbi website.",
   "main": "jquery.scrollex.min.js",
-  "repository": "https://github.com/professorzumbi/jquery.scrollex.git",
+  "repository": "https://github.com/professorzumbi/scrollex.git",
   "author": "Munair <munair@gmail.com>",
   "license": "MIT"
 }
